// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given legal officer, when rendering, then render legal officer UI or redirect to login 1`] = `
<Routes>
  <Route
    element={
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    }
    path="/legal-officer/*"
  />
  <Route
    element={
      <Navigate
        to="/legal-officer"
      />
    }
    path="/user/*"
  />
  <Route
    element={<Login />}
    path="/login"
  />
  <Route
    element={
      <Navigate
        to="/legal-officer"
      />
    }
    path="/"
  />
</Routes>
`;

exports[`Given no addresses, when rendering, then null 1`] = `null`;

exports[`Given null addresses, when rendering, then null 1`] = `null`;

exports[`Given undefined current address, when rendering, then enable redirect to login via either legal officer or user route 1`] = `
<Routes>
  <Route
    element={
      <Navigate
        to="/user"
      />
    }
    path="/legal-officer/*"
  />
  <Route
    element={
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    }
    path="/user/*"
  />
  <Route
    element={<Login />}
    path="/login"
  />
  <Route
    element={
      <Navigate
        to="/user"
      />
    }
    path="/"
  />
</Routes>
`;

exports[`Given wallet user, when rendering, then render user UI or redirect to login 1`] = `
<Routes>
  <Route
    element={
      <Navigate
        to="/user"
      />
    }
    path="/legal-officer/*"
  />
  <Route
    element={
      <RenderOrRedirectToLogin
        render={[Function]}
      />
    }
    path="/user/*"
  />
  <Route
    element={<Login />}
    path="/login"
  />
  <Route
    element={
      <Navigate
        to="/user"
      />
    }
    path="/"
  />
</Routes>
`;
